--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 transition-colors text-gray-800 dark:text-gray-300 relative">
   <div class="min-h-screen md:grid md:place-content-center pb-4">
-    <div class="md:grid md:grid-flow-row pb-12 md:pb-0 md:max-w-6xl">
+    <div class="md:grid md:gap-8 md:grid-flow-row pb-12 md:pb-0 md:max-w-6xl">
       <div class="p-4 mb-12 md:mb-0 grid grid-flow-row md:grid-flow-col-dense sm:gap-x-8">
         <div class="place-self-center content-center w-[clamp(250px,40vw,350px)]">
           <picture>
