--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -178,9 +178,9 @@
       <h3 class="section-header">Skills</h3>
       <ul class="mt-2 dashed-list">
         <li><strong>Programming languages:</strong> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React); some experience with C#, shell scripting</li>
-        <li><strong>Infrastructure:</strong> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform; some experience with Kubernetes, Google Cloud</li>
+        <li><strong>Infrastructure:</strong> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform; some experience with Kubernetes, Google Cloud, Cloudflare</li>
         <li><strong>Databases:</strong> Extensive experience with MySQL and SQL Server development/optimization, Redis; some experience with MongoDB, DynamoDB, MySQL administration</li>
-        <li><strong>Other technology:</strong> Extensive experience with Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
+        <li><strong>Other technology:</strong> Extensive experience with Git; experience with Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
       </ul>
     </div>
 
