--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -32,7 +32,7 @@
             <div class="block md:inline-block">Rock Hill, SC</div>
           </h2>
 
-          <div class="mt-8 grid grid-flow-row gap-4 text-left">
+          <div class="mt-8 md:mx-8 grid grid-flow-row gap-4 text-left">
             <a href="mailto:hello@jimmysawczuk.com" class="block p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank">
               <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/fa/duotone/paper-plane.svg" }}</div>
               E-mail
